--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en" class="scroll-smooth">
 <head>
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="a50d6dca-bca2-45a7-ae20-7d35a62fe836" type="text/javascript" async></script>
+       <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KTE1P4KT35"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+ gtag('config', 'G-KTE1P4KT35');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -162,5 +170,6 @@
 
 </body>
 </html>
+
 
 
